objects/vlocity_cmt__VlocityStateTransitionRule__c.object
<CustomObject>
    <description>This object stores the rules configured to be executed on an object state transition and the actions that get executed when the rules evaluate to true.</description>
    <fields>
        <fullName>vlocity_cmt__Conditions__c</fullName>
        <description>Rules conditions</description>
        <label>Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <description>The description for this rule.</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExecutionSequence__c</fullName>
        <description>The rules execution sequence</description>
        <label>Execution Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FailureMessage__c</fullName>
        <description>The message to be logged or displayed when this rule evaluates to false.</description>
        <label>Failure Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate if the rule is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Message__c</fullName>
        <description>The message to be logged or displayed when this rule evaluates to true.</description>
        <label>Success Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleEvaluationFalseVlocityActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional action associating with the rule. If rule evaluation is false, this action is executed.</description>
        <label>False Action</label>
        <referenceTo>vlocity_cmt__VlocityAction__c</referenceTo>
        <relationshipLabel>Vlocity State Transition Rules</relationshipLabel>
        <relationshipName>StateTransitionRuleFalseActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleVlocityActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is an optional action associating with the rule. If rule evaluation is true, this action is executed.</description>
        <label>True Action</label>
        <referenceTo>vlocity_cmt__VlocityAction__c</referenceTo>
        <relationshipLabel>Vlocity State Transition Rules</relationshipLabel>
        <relationshipName>StateTransitionRuleActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StateTransitionId__c</fullName>
        <description>The Vlocity State Transition that this rule applies to.</description>
        <label>State Transition</label>
        <referenceTo>vlocity_cmt__VlocityStateTransition__c</referenceTo>
        <relationshipName>StateTransitionRuleTransitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity State Transition Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity State Transition Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>